Closed
Bug 881022
Opened 12 years ago
Closed 12 years ago
potential for crash in mozilla::layout::ScrollbarActivity::SetIsFading
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla24
| Tracking | Status | |
|---|---|---|
| firefox21 | --- | unaffected |
| firefox22 | --- | unaffected |
| firefox23 | + | verified |
| firefox24 | + | verified |
| firefox-esr17 | --- | unaffected |
People
(Reporter: spohl, Assigned: spohl)
References
Details
(Keywords: crash, regression, Whiteboard: [lion-scrollbars+])
Attachments
(1 file)
|
3.97 KB,
patch
|
roc
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #877097 +++
Bug 877097 revealed that ScrollbarActivity::SetIsFading may crash in similar fashion as ScrollbarActivity::UpdateOpacity used to. A similar fix should be written for ScrollbarActivity::SetIsFading.
| Assignee | ||
Comment 1•12 years ago
|
||
Attachment #760151 -
Flags: review?(roc)
| Assignee | ||
Updated•12 years ago
|
Status: NEW → ASSIGNED
Attachment #760151 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Updated•12 years ago
|
Updated•12 years ago
|
| Assignee | ||
Comment 4•12 years ago
|
||
Comment on attachment 760151 [details] [diff] [review]
Patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 636564
User impact if declined: Potential for crashes, similar to the ones reported in bug 877097.
Testing completed (on m-c, etc.): Has been on m-c for a few days.
Risk to taking this patch (and alternatives if risky): low, since the fix closely matches what was done for bug 877097.
String or IDL/UUID changes made by this patch: none
Attachment #760151 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Attachment #760151 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 6•12 years ago
|
||
Keywords: checkin-needed
Comment 7•12 years ago
|
||
Verified as fixed on Firefox 23 beta 8 - I could not find any crashes in Socorro with the signature: [@ mozilla::layout::ScrollbarActivity::SetIsFading].
Comment 8•12 years ago
|
||
(In reply to Simona B [QA] from comment #7)
> Verified as fixed on Firefox 23 beta 8 - I could not find any crashes in
> Socorro with the signature: [@
> mozilla::layout::ScrollbarActivity::SetIsFading].
Verified FF 24b8
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•