Bug 881022: Check that the scrollable frame is still alive after each call to UnsetOpacityOnElement for the two scrollbars to avoid crashing. r=roc