layout/generic/ScrollbarActivity.h
@@ -100,7 +100,7 @@ protected:
                                bool* aStoredHoverState);
 
   void SetIsActive(bool aNewActive);
-  void SetIsFading(bool aNewFading);
+  bool SetIsFading(bool aNewFading); // returns false if 'this' was destroyed
 
   void BeginFade();
   void EndFade();
